# cartgp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
cpp/include/cartgp/: genotype.h
cpp/src/cartgp/: python_binding.cpp
cpp/src/tests/: test_cartgp.cpp
examples/python/: symbolic_regression.ipynb  symbolic_regression.py
python/tests/: test_pycartgp.py
